Agregando flujo de actualización y consulta de inventario
